--- a/parcitals/Instructions.html
+++ b/parcitals/Instructions.html
@@ -3,10 +3,10 @@
     <!--<p>{{user}}</p>-->
 </div>
 <div class="row">
-    <div class="col-lg-2">
+    <div class="col-lg-1">
 
     </div>
-    <div class="col-lg-8">
+    <div class="col-lg-10">
 
 
 <div class="row">
@@ -18,19 +18,22 @@
 </div>
 
 <div class="row">
-    <h3>
-        Opening Page
+    <!--<h3>-->
+    <!--Opening Page-->
 
-    </h3>
+    <!--</h3>-->
     <p>
         The tiles in your floor are initially with no colors and the painting robots are in their initial positions.
         The robot you are controlling now) will be marked with a yellow glow. Each robot can set a color to point.
         In the picture below, your robot has the blue color selected, while the other robot has the red color selected.
     </p>
-    <img style="width: 70%" align="center" src="img/tutorial/tut-1.png">
+    <!--<img style="width: 70%" align="center" src="img/tutorial/tut-1.png">-->
 
 </div>
+        <div class="row">
+            <img src="img/tutorial/tut-2.png" style="width: 70%" align="center">
 
+        </div>
 <div class="row">
     <h3>
         Possible Actions
@@ -51,35 +54,36 @@
 
 <div class="row">
     <h3>
-        Cost:
-    </h3>
-    <p>
-        Each move on the board has a fixed cost (of 1).
-    </p>
-    <p>
-        Once you have completed the task and you think is optimal,
-        submit it by clicking the "Continue" button. Once you’ve submitted your solution,
-        you will not be able to change it.
-    </p>
-</div>
-<div class="row">
-    <h3>
         The Task
     </h3>
 </div>
 
 <div class="row">
     <p>
-        We will show you a few pictures of game boards and ask you to
-        estimate the minimal cost to arrange each board according to the goal pattern (see below).
-        Your reward will depend on how close your estimate is to the <strong>true minimal</strong> cost to complete the goal pattern.
+        Each move on the board has a <strong>fixed</strong> cost of 1. Your task is arrange each board according to the
+        goal pattern (see below) with <strong>minimal cost</strong>.
+
+        <!--We will show you a few pictures of game boards and ask you to-->
+        <!--estimate the minimal cost to arrange each board according to the goal pattern (see below).-->
+        <!--Your reward will depend on how close your estimate is to the <strong>true minimal</strong> cost to complete the goal pattern.-->
 
     </p>
 </div>
-<div class="row">
-    <img src="img/tutorial/tut-2.png" style="width: 70%" align="center">
 
-</div>
+
+        <!--<div class="row">-->
+        <!--<h3>-->
+        <!--Cost:-->
+        <!--</h3>-->
+        <!--<p>-->
+        <!--Each move on the board has a <strong>fixed</strong> cost of 1.-->
+        <!--</p>-->
+        <!--<p>-->
+        <!--Once you have completed the task and you think is optimal,-->
+        <!--submit it by clicking the "Continue" button. Once you’ve submitted your solution,-->
+        <!--you will not be able to change it.-->
+        <!--</p>-->
+        <!--</div>-->
 <div class="row">
     <h3>
         Note
@@ -96,22 +100,28 @@
         Your payment:
 
     </h3>
-    <ul>
-        <li>
-            60 cents fixed payment
-        </li>
-        <li>
-            15 cents for each correct estimate on the stages (i.e., when your ESTIMATE cost equals the TRUE cost).
-        </li>
-    </ul>
+    <p>
+        Your get 50 cents fixed payment and a BONUS that will depend on how close your estimate is to the true minimal
+        cost to complete the goal pattern:
+
+
+    </p>
+    <!--<ul>-->
+    <!--<li>-->
+    <!--60 cents fixed payment-->
+    <!--</li>-->
+    <!--<li>-->
+    <!--15 cents for each correct estimate on the stages (i.e., when your ESTIMATE cost equals the TRUE cost).-->
+    <!--</li>-->
+    <!--</ul>-->
 </div>
 
-<div class="row">
-    <h3>
-        When you are ready to start the task, press "continue".
-        You will then complete a short comprehension test and will be presented with the problem.
-    </h3>
-</div>
+        <!--<div class="row">-->
+        <!--<h3>-->
+        <!--When you are ready to start the task, press "continue".-->
+        <!--You will then complete a short comprehension test and will be presented with the problem.-->
+        <!--</h3>-->
+        <!--</div>-->
     </div>
 </div>
 <div class="row">
