--- a/parcitals/calibration2.html
+++ b/parcitals/calibration2.html
@@ -6,7 +6,7 @@
             </h1>
         </div>
         <div class="row">
-            <h5>Estimate the steps</h5>
+            <!--<h5>Estimate the steps</h5>-->
         </div>
         <div class="row">
             <div class="col-lg-12">
@@ -14,16 +14,17 @@
                     <!--In your answer, please write how many ups, downs, lefts and rights steps your robot will go.-->
                     <!--Remember that the goal is to color the floor tile like the design at minimal cost.-->
                     <!--Also bear in mind that going down cost more than the other steps.</p>-->
-<p>
-    Please estimate the minimal number of actions to arrange each board according to the goal pattern (see below).
-</p>
+                <p>
+                    Please estimate the minimal cost (
+                    <small>number of actions</small>
+                    ) to arrange each board according to the goal pattern (see below).
+                </p>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <p style="font-weight: bold">This is not the real task; this is a practice session again.
-                    Try to estimate the steps your robots need to to to get to the goal and you will
-                    get a feedback how close are you to the real cost.
+                <p style="font-weight: bold">This is a practice session.
+                    We will give you feedback how close are you to the real cost.
                 </p>
 
             </div>
