--- a/parcitals/calibrationResults.html
+++ b/parcitals/calibrationResults.html
@@ -8,9 +8,9 @@
             </h1>
         </div>
         <div class="row">
-<p>
-    You have been asked to estimate the steps need to get to the goal for this state:
-</p>
+            <!--<p>-->
+            <!--You have been asked to estimate the steps need to get to the goal for this state:-->
+            <!--</p>-->
         </div>
         <div class="pic" align="center" id="calibrationPic">
             <div class="row" align="center">
