--- a/parcitals/experiment.html
+++ b/parcitals/experiment.html
@@ -10,7 +10,7 @@
         <!--<h3>State {{index+1}}</h3>-->
         <!--</div>-->
         <div class="row">
-            <h5>Estimate the steps</h5>
+            <!--<h5>Estimate the steps</h5>-->
         </div>
         <div class="row">
             <div class="col-lg-12">
